# aid

./: Cargo.toml
.github/workflows/: check.yml
src/: aid.rs  error.rs  lib.rs
