[package]
name = "aid"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["bin", "byte", "csvs", "gis", "gpu", "hype", "icon", "id", "img", "plot", "oauth", "req", "route", "serial", "sql", "trace", "urls", "win"]
bin = ["bincode"]
byte = ["byte-unit"]
csvs = ["csv"]
gis = ["geojson", "shapefile", "galileo"]
gpu = ["wgpu"]
hype = ["hyper"]
icon = ["dioxus-desktop"]
id = ["uuid"]
img = ["image"]
plot = ["plotters", "plotters-bitmap"]
oauth = ["oauth2"]
req = ["reqwest"]
route = ["axum"]
serial = ["serde", "serde_json"]
sql = ["sqlx"]
trace = ["tracing-subscriber"]
urls = ["url"]
win = ["winit"]

[dependencies]
axum = { version = "0.7.4", optional = true }
bincode = { version = "1.3.3", optional = true }
byte-unit = { version = "5.1.3", optional = true }
csv = { version = "1.3.0", optional = true }
dioxus-desktop = { version = "0.5.1", optional = true }
galileo = { git = "https://github.com/Maximkaaa/galileo", optional = true }
geojson = { version = "0.24.1", optional = true }
hyper = { version = "1.2.0", optional = true }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
image = { version = "0.25.1", optional = true }
oauth2 = { version = "4.4.2", optional = true }
plotters = { version = "0.3.5", optional = true }
plotters-bitmap = { version = "0.3.3", optional = true }
reqwest = { version = "0.12.4", optional = true }
serde = { version = "1.0.195", optional = true }
serde_json = { version = "1.0.111", optional = true }
shapefile = { version = "0.6.0", optional = true }
sqlx = { version = "0.7.3", optional = true }
thiserror = "1.0.56"
tracing-subscriber = { version = "0.3.18", optional = true }
url = { version = "2.5.0", optional = true }
uuid = { version = "1.6.1", optional = true }
wgpu = { version = "0.19.4", optional = true }
winit = { version = "0.29.15", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
