[package]
name = "aid"
version = "0.1.0"
edition = "2021"
authors = ["Erik Rose <erose@grantspassoregon.gov>"]
description = "Error handling library for the City of Grants Pass, Oregon."
repository = "https://github.com/grantspassoregon/aid"
license = "Apache-2.0"

[features]
default = ["full"]
full = [
  "bin",
  "byte",
  "csvs",
  "env",
  "gis",
  "gpu",
  "hype",
  "icon",
  "id",
  "img",
  "oauth",
  "parse",
  "plot",
  "req",
  "route",
  "serial",
  "sql",
  "time",
  "trace",
  "urls",
  "win",
]
bin = ["bincode"]
byte = ["byte-unit"]
csvs = ["csv"]
env = ["dotenvy"]
gis = ["geojson", "shapefile", "galileo"]
gpu = ["wgpu"]
hype = ["hyper"]
icon = ["dioxus-desktop"]
id = ["uuid"]
img = ["image"]
parse = ["nom"]
plot = ["plotters", "plotters-bitmap"]
oauth = ["oauth2"]
req = ["reqwest"]
route = ["axum"]
serial = ["serde", "serde_json"]
sql = ["sqlx", "tiberius"]
time = ["jiff"]
trace = ["tracing-subscriber"]
urls = ["url"]
win = ["winit"]

[dependencies]
axum = { version = "0.8.1", optional = true }
bincode = { version = "1.3.3", optional = true }
byte-unit = { version = "5.1.6", optional = true }
csv = { version = "1.3.1", optional = true }
derive_more = { version = "2.0.1", features = ["full"] }
dioxus-desktop = { version = "0.6.3", optional = true }
dotenvy = { version = "0.15.7", optional = true }
galileo = { git = "https://github.com/Maximkaaa/galileo", optional = true }
geojson = { version = "0.24.1", optional = true }
hyper = { version = "1.6.0", optional = true }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
image = { version = "0.25.5", optional = true }
jiff = { version = "0.2.0", optional = true }
nom = { version = "8.0.0", optional = true }
oauth2 = { version = "5.0.0", optional = true }
plotters = { version = "0.3.7", optional = true }
plotters-bitmap = { version = "0.3.7", optional = true }
reqwest = { version = "0.12.12", optional = true }
serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.138", optional = true }
shapefile = { version = "0.6.0", optional = true }
sqlx = { version = "0.8.3", optional = true }
thiserror = "2.0.11"
tiberius = { version = "0.12.3", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
url = { version = "2.5.4", optional = true }
uuid = { version = "1.13.1", optional = true }
wgpu = { version = "0.19.4", optional = true }
winit = { version = "0.29.15", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
